--- a/configure.ac
+++ b/configure.ac
@@ -8,7 +8,6 @@ AC_CONFIG_SRCDIR([config.h.in])
 AC_CONFIG_HEADER([config.h])
 
 # Checks for programs.
-#AC_CANONICAL_TARGET
 AC_CANONICAL_HOST
 AC_CANONICAL_BUILD
 AC_PROG_CC
@@ -19,16 +18,29 @@ AC_ARG_ENABLE([sdl],
         [use SDL to optionally display output @<:@default=check@:>@])],
     [],
     [enable_sdl=check])
+AC_ARG_ENABLE([opencv],
+    [AS_HELP_STRING([--enable-opencv],
+        [enable opencv library functions which some filters depend on @<:@default=check@:>@])],
+    [],
+    [enable_opencv=check])
 
 AC_CHECK_LIB([freeimage], [main])
 AC_CHECK_LIB([pthread], [main])
 AS_IF([test "x$enable_sdl" != xno],
     [AC_HAVE_LIBRARY([-lSDL])])
+AS_IF([test "x$enable_opencv" != xno],
+    [AC_HAVE_LIBRARY([cxcore]) AC_HAVE_LIBRARY([cv]) AC_HAVE_LIBRARY([highgui]) AC_HAVE_LIBRARY([cvaux]) AC_HAVE_LIBRARY([ml])])
 
 # Checks for header files.
 AC_HEADER_STDC
 AC_CHECK_HEADERS([fcntl.h limits.h stdint.h stdlib.h string.h sys/ioctl.h sys/time.h unistd.h])
-#AC_CHECK_HEADERS([FreeImage.h pthread.h SDL/SDL.h linux/videodev2.h])
+AC_CHECK_HEADERS([FreeImage.h])
+AC_CHECK_HEADERS([pthread.h])
+AC_CHECK_HEADERS([linux/videodev2.h])
+AS_IF([test "x$enable_sdl" != xno],
+    [AC_CHECK_HEADERS([SDL/SDL.h])])
+#AS_IF([test "x$enable_opencv" != xno],
+#    [AC_CHECK_HEADERS([opencv/cv.h opencv/highgui.h opencv/cv.h opencv/cxcore.h])])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_HEADER_STDBOOL
@@ -48,7 +60,7 @@ AC_PROG_GCC_TRADITIONAL
 AC_FUNC_MALLOC
 AC_FUNC_MMAP
 AC_FUNC_SELECT_ARGTYPES
-AC_CHECK_FUNCS([memset munmap pow select sqrt strcasecmp strerror strrchr strtoul])
+AC_CHECK_FUNCS([gettimeofday memset munmap pow select sqrt strcasecmp strerror strrchr strtoul])
 
 AC_CONFIG_FILES([Makefile
                  src/Makefile])
