added ability to read input from video files with ffmpeg and swscale

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,6 +4,8 @@ ia_SOURCES =				\
 	analyze.h				\
 	common.c				\
 	common.h				\
+	ffmpeg.c				\
+	ffmpeg.h				\
 	iaio.c					\
 	iaio.h					\
 	ia_sequence.c			\
