--- a/configure.ac
+++ b/configure.ac
@@ -23,6 +23,11 @@ AC_ARG_ENABLE([opencv],
         [enable opencv library functions which some filters depend on @<:@default=check@:>@])],
     [],
     [enable_opencv=check])
+AC_ARG_ENABLE([ffmpeg],
+    [AS_HELP_STRING([--enable-ffmpeg],
+        [enables video input support using ffmpeg and swscale libraries @<:@default=check@:>@])],
+    [],
+    [enable_ffmpeg=check])
 
 AC_CHECK_LIB([freeimage], [main])
 AC_CHECK_LIB([pthread], [main])
@@ -30,6 +35,13 @@ AS_IF([test "x$enable_sdl" != xno],
     [AC_HAVE_LIBRARY([-lSDL])])
 AS_IF([test "x$enable_opencv" != xno],
     [AC_HAVE_LIBRARY([cxcore]) AC_HAVE_LIBRARY([cv]) AC_HAVE_LIBRARY([highgui]) AC_HAVE_LIBRARY([cvaux]) AC_HAVE_LIBRARY([ml])])
+AS_IF([test "x$enable_ffmpeg" != xno],
+    [AC_CHECK_LIB([avutil], [main])
+     AC_CHECK_LIB([avformat], [main])
+     AC_CHECK_LIB([avcodec], [main])
+     AC_CHECK_LIB([z], [main])
+     AC_CHECK_LIB([avutil], [main])
+     AC_CHECK_LIB([swscale], [main])])
 
 # Checks for header files.
 AC_HEADER_STDC
@@ -39,8 +51,10 @@ AC_CHECK_HEADERS([pthread.h])
 AC_CHECK_HEADERS([linux/videodev2.h])
 AS_IF([test "x$enable_sdl" != xno],
     [AC_CHECK_HEADERS([SDL/SDL.h])])
-#AS_IF([test "x$enable_opencv" != xno],
-#    [AC_CHECK_HEADERS([opencv/cv.h opencv/highgui.h opencv/cv.h opencv/cxcore.h])])
+AS_IF([test "x$enable_opencv" != xno],
+    [AC_CHECK_HEADERS([opencv/cv.h opencv/highgui.h opencv/cv.h opencv/cxcore.h])])
+AS_IF([test "x$enable_ffmpeg" != xno],
+    [AC_CHECK_HEADERS([ffmpeg/avcodec.h ffmpeg/avformat.h ffmpeg/swscale.h])])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_HEADER_STDBOOL
@@ -60,7 +74,7 @@ AC_PROG_GCC_TRADITIONAL
 AC_FUNC_MALLOC
 AC_FUNC_MMAP
 AC_FUNC_SELECT_ARGTYPES
-AC_CHECK_FUNCS([gettimeofday memset munmap pow select sqrt strcasecmp strerror strrchr strtoul])
+AC_CHECK_FUNCS([gettimeofday memset munmap pow regcomp select sqrt strcasecmp strerror strrchr strtoul])
 
 AC_CONFIG_FILES([Makefile
                  src/Makefile])
