--- a/configure.ac
+++ b/configure.ac
@@ -13,29 +13,29 @@ AC_CANONICAL_BUILD
 AC_PROG_CC
 
 # Checks for libraries.
-AC_ARG_ENABLE([sdl],
-    [AS_HELP_STRING([--enable-sdl],
+AC_ARG_WITH([sdl],
+    [AS_HELP_STRING([--with-sdl],
         [use SDL to optionally display output @<:@default=check@:>@])],
     [],
-    [enable_sdl=check])
-AC_ARG_ENABLE([opencv],
-    [AS_HELP_STRING([--enable-opencv],
-        [enable opencv library functions which some filters depend on @<:@default=check@:>@])],
+    [with_sdl=check])
+AC_ARG_WITH([opencv],
+    [AS_HELP_STRING([--with-opencv],
+        [include opencv library functions which some filters depend on @<:@default=check@:>@])],
     [],
-    [enable_opencv=check])
-AC_ARG_ENABLE([ffmpeg],
-    [AS_HELP_STRING([--enable-ffmpeg],
-        [enables video input support using ffmpeg and swscale libraries @<:@default=check@:>@])],
+    [with_opencv=check])
+AC_ARG_WITH([ffmpeg],
+    [AS_HELP_STRING([--with-ffmpeg],
+        [adds video input support using ffmpeg and swscale libraries @<:@default=check@:>@])],
     [],
-    [enable_ffmpeg=check])
+    [with_ffmpeg=check])
 
 AC_CHECK_LIB([freeimage], [main])
 AC_CHECK_LIB([pthread], [main])
-AS_IF([test "x$enable_sdl" != xno],
+AS_IF([test "x$with_sdl" != xno],
     [AC_HAVE_LIBRARY([-lSDL])])
-AS_IF([test "x$enable_opencv" != xno],
+AS_IF([test "x$with_opencv" != xno],
     [AC_HAVE_LIBRARY([cxcore]) AC_HAVE_LIBRARY([cv]) AC_HAVE_LIBRARY([highgui]) AC_HAVE_LIBRARY([cvaux]) AC_HAVE_LIBRARY([ml])])
-AS_IF([test "x$enable_ffmpeg" != xno],
+AS_IF([test "x$with_ffmpeg" != xno],
     [AC_CHECK_LIB([avutil], [main])
      AC_CHECK_LIB([avformat], [main])
      AC_CHECK_LIB([avcodec], [main])
@@ -49,11 +49,11 @@ AC_CHECK_HEADERS([fcntl.h limits.h stdint.h stdlib.h string.h sys/ioctl.h sys/ti
 AC_CHECK_HEADERS([FreeImage.h])
 AC_CHECK_HEADERS([pthread.h])
 AC_CHECK_HEADERS([linux/videodev2.h])
-AS_IF([test "x$enable_sdl" != xno],
+AS_IF([test "x$with_sdl" != xno],
     [AC_CHECK_HEADERS([SDL/SDL.h])])
-AS_IF([test "x$enable_opencv" != xno],
+AS_IF([test "x$with_opencv" != xno],
     [AC_CHECK_HEADERS([opencv/cv.h opencv/highgui.h opencv/cv.h opencv/cxcore.h])])
-AS_IF([test "x$enable_ffmpeg" != xno],
+AS_IF([test "x$with_ffmpeg" != xno],
     [AC_CHECK_HEADERS([ffmpeg/avcodec.h ffmpeg/avformat.h ffmpeg/swscale.h])])
 
 # Checks for typedefs, structures, and compiler characteristics.
