added configure script checks for v4l2

--- a/configure.ac
+++ b/configure.ac
@@ -28,6 +28,11 @@ AC_ARG_WITH([ffmpeg],
         [adds video input support using ffmpeg and swscale libraries @<:@default=check@:>@])],
     [],
     [with_ffmpeg=check])
+AC_ARG_WITH([v4l2],
+    [AS_HELP_STRING([--with-v4l2],
+        [allows capture from v4l2 compliant cameras @<:@default=check@:>@])],
+    [],
+    [with_v4l2=check])
 
 AC_CHECK_LIB([freeimage], [main])
 AC_CHECK_LIB([pthread], [main])
@@ -40,21 +45,21 @@ AS_IF([test "x$with_ffmpeg" != xno],
      AC_CHECK_LIB([avformat], [main])
      AC_CHECK_LIB([avcodec], [main])
      AC_CHECK_LIB([z], [main])
-     AC_CHECK_LIB([avutil], [main])
      AC_CHECK_LIB([swscale], [main])])
 
 # Checks for header files.
 AC_HEADER_STDC
-AC_CHECK_HEADERS([fcntl.h limits.h stdint.h stdlib.h string.h sys/ioctl.h sys/time.h unistd.h])
+AC_CHECK_HEADERS([fcntl.h limits.h malloc.h stdint.h stdlib.h string.h sys/ioctl.h sys/time.h unistd.h])
 AC_CHECK_HEADERS([FreeImage.h])
 AC_CHECK_HEADERS([pthread.h])
-AC_CHECK_HEADERS([linux/videodev2.h])
 AS_IF([test "x$with_sdl" != xno],
     [AC_CHECK_HEADERS([SDL/SDL.h])])
 AS_IF([test "x$with_opencv" != xno],
     [AC_CHECK_HEADERS([opencv/cv.h opencv/highgui.h opencv/cv.h opencv/cxcore.h])])
 AS_IF([test "x$with_ffmpeg" != xno],
-    [AC_CHECK_HEADERS([ffmpeg/avcodec.h ffmpeg/avformat.h ffmpeg/swscale.h])])
+    [AC_CHECK_HEADERS([libavcodec/avcodec.h libavformat/avformat.h libswscale/swscale.h])])
+AS_IF([test "x$with_v4l2" != xno],
+    [AC_CHECK_HEADERS([linux/videodev2.h])])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_HEADER_STDBOOL
@@ -74,6 +79,7 @@ AC_PROG_GCC_TRADITIONAL
 AC_FUNC_MALLOC
 AC_FUNC_MMAP
 AC_FUNC_SELECT_ARGTYPES
+AC_FUNC_STAT
 AC_CHECK_FUNCS([gettimeofday memset munmap pow regcomp select sqrt strcasecmp strerror strrchr strtoul])
 
 AC_CONFIG_FILES([Makefile
